# Vigilancia_tecnologica

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fly.toml  local.env  nixpacks.toml  railway.json  render.yaml
.atl/: skill-registry.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
_dev/: exploration.md
_dev/prompts/: plan-maestro-vigilagraph.md
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/app/: __init__.py  main.py
api/tests/: conftest.py  test_audit.py  test_auth.py  test_cookie_auth.py  test_corpus.py  test_csrf.py  test_documents.py  test_projects.py  test_ratelimit.py  test_rbac.py  test_safe_background_task.py  test_search.py
docs/: ARCHITECTURE.md
infra/: docker-compose.prod.yml  render-build.sh
infra/docker/: start.sh  (+4 more)
openspec/: config.yaml
vigilagraph/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  render.yaml
vigilagraph/apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
vigilagraph/apps/api/alembic/versions/: 001_initial_models.py
vigilagraph/apps/api/app/: main.py
vigilagraph/apps/api/app/ai/: __init__.py  prompts.py
vigilagraph/apps/api/app/api/: deps.py
vigilagraph/apps/api/app/api/v1/: auth.py  corpus.py  documents.py  graph.py  projects.py  reports.py  router.py
vigilagraph/apps/api/app/connectors/: openalex.py  semantic_scholar.py  web.py
vigilagraph/apps/api/app/core/: config.py  errors.py  logging.py
vigilagraph/apps/api/app/db/: __init__.py  session.py
vigilagraph/apps/api/app/models/: __init__.py  analysis.py  collection_run.py  document.py  enums.py  graph.py  organization.py  project.py  report.py  search_strategy.py  user.py
vigilagraph/apps/api/app/repositories/: __init__.py  collection_run_repository.py  document_repository.py  graph_repository.py
vigilagraph/apps/api/app/schemas/: __init__.py  analysis.py  auth.py  collection_run.py  document.py  organization.py  project.py  report.py  search_strategy.py
vigilagraph/apps/api/app/services/: __init__.py  auth_service.py  corpus_service.py  document_service.py  graph_service.py  project_service.py  search_strategy_service.py
vigilagraph/apps/api/app/tasks/: analysis.py  collection.py
vigilagraph/apps/worker/: Dockerfile  pyproject.toml
vigilagraph/apps/worker/tests/: conftest.py  test_parser.py
vigilagraph/apps/worker/worker/: __init__.py  app.py
vigilagraph/apps/worker/worker/ai/: service.py
vigilagraph/apps/worker/worker/connectors/: base.py  lens.py  openalex.py
vigilagraph/apps/worker/worker/graphify/: __init__.py  adapter.py  importer.py  parser.py
vigilagraph/apps/worker/worker/tasks/: __init__.py  analysis_tasks.py  collection_tasks.py  graph_tasks.py
web/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  requirements.txt  vitest.config.ts
(+213 files in other folders)
