[project]
name = "vigilagraph-api"
version = "1.0.0"
description = "VigilaGraph IA — FastAPI backend"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "VigilaGraph" }]

dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.14",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "httpx>=0.28",
    "structlog>=24.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0",
    "python-multipart>=0.0.17",
    "tenacity>=9.0",
    "redis>=5.2",
    "celery>=5.4",
    "boto3>=1.36",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
