[project]
name = "vigilagraph-worker"
version = "1.0.0"
description = "VigilaGraph IA — Celery background worker"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "VigilaGraph" }]

dependencies = [
    "celery[redis]>=5.4,<6",
    "redis>=5.2",
    "httpx>=0.28",
    "boto3>=1.36",
    "tenacity>=9.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pypdf>=5.1",
    "pymupdf>=1.24",
    "trafilatura>=1.12",
    "structlog>=24.4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7",
    "pgvector>=0.3",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0,<3",
    "bcrypt>=4.0,<5.0",
    "openai>=1.55",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
